--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -503,7 +503,7 @@ you carry on your protection in the South.</p>
 
 <p class="center noindent">C.</p>
 
-<p class=" center noindent">P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.</p>
+<p class=" center noindent halfbottommargin">P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>.</p>
 <p class="right right1">Molepolole, 28th April 1885.</p>
 <p>At a meeting of Bakwena with Sir Charles Warren, messenger of the Queen of
 England, he made known to us the pleasure of the Queen to establish a
@@ -587,17 +587,17 @@ those who assisted him the lands occupied by Montsioa. To add to the confusion, 
 liquor had been introduced into these territories, and many of the rich people had
 acquired a longing for strong drink, and would sell all or anything they had to obtain</p>
 
+<!-- page break-->
 
-<!-- 8 --> <!--
-43
-624
-it. First their oxen, then their karosses would go, and they would trump up their
+<fw class="center halfbottommargin">43</fw>
+
+<p class="noindent">it. First their oxen, then their karosses would go, and they would trump up their
 individual rights to land in order to be able to sell that, and the result has been
 inextricable confusion. Now, there is something more which has caused all this, and
 that is the land-owners in some portions of South Africa have more children than they
 have land for, and as these children grow up they look about for land to settle on, and they
 go and join themselves to the first native Chief they can find who wishes to extend his
-territory, and SO there is a constant tendency to war; and as time goes by this tendency
+territory, and so there is a constant tendency to war; and as time goes by this tendency
 increases, for besides these are large numbers coming from Europe to get their living. You
 have not only the surplus population of the Cape Colony, Transvaal, Free State, and
 England to consider, but the country Germany is arranging for drafting from her large
@@ -613,8 +613,8 @@ and, upon the principle that prevention is better than cure, it has been conside
 desirable in England to say, before these lawless persons come into these territories, that
 the Queen is prepared to protect them. The proclamation by the Queen of the
 Protectorate is sufficient to prevent the neighbouring Governments interfering with the
-country, but it may not be sufficient to prevent lawless persons entering the territory,—
-persons who are not acting immediately under the Government of any neighbouring
+country, but it may not be sufficient to prevent lawless persons entering the
+territory,—persons who are not acting immediately under the Government of any neighbouring
 territory ; and the question arises, what is the best way of keeping these people out.
 Of course you can all understand that it is impracticable to have a large expedition
 like that to Montsioa's country always at hand. The cost is too great, and the question
@@ -622,53 +622,55 @@ is how to devise some economical method by which we can keep the territories int
 and I have come here to-day, not only to read the Queen's Proclamation, but to obtain
 your views as to the best method of protecting this territory. (Here was read the
 notice of the establishment of the Protectorate in Government Gazette Extraordinary of
-23rd March 1885, Cape of Good Hope.)
-<em>Gohakhose, son of Selcomi</em>.-We have heard the words of the Queen of England. This
+23rd March 1885, Cape of Good Hope.)</p>
+<p><em>Gohakhose, son of Sekomi</em>.—We have heard the words of the Queen of England. This
 is our answer. We do not deny her ; we do not oppose her coming into our country ;
 but what we do say is that the Queen must not come into the country to sell it ; for if
 it is sold, seeing that we are an agricultural and pastoral people, we shall not have room
 to sow our gardens or keep our stock. Further we have made a law with reference
 to strong drink, that it should not come amongst us. This is all we have to say on
-the matter.
-<em>Ini</em>.—We have heard the announcement of the Queen. We have only one wish, that
+the matter.</p>
+<p><em>Ini</em>.—We have heard the announcement of the Queen. We have only one wish, that
 is, that if the Queen's Government comes into the country it will come nicely, and not
 result in the sale of land. We should have sore hearts if the land was sold, for we live by
 our cattle, corn, and hunting. We know that the game is disappearing, and we trust in
 our garden lands and cattle for the future. We have another law also concerning strong
 drink. Our Chief made the law that it should not come into the country, and we
-approve of that law as he does.
-<em>Kuaati</em>.—We rejoice to hear the words of the Queen. At the same time we wish that
+approve of that law as he does.</p>
+<p><em>Kuaati</em>.—We rejoice to hear the words of the Queen. At the same time we wish that
 if the Queen does come to be on good terms of friendship with her ; and we hope to keep
 our lands where we sow and feed our cattle, and we shall be well pleased. We Bechuanas
 live by our cattle and corn, and that which we most fear is the white man's drink, and
 even our own native beer ; we don't like that even. It is the coming of drink which we
-most dread.
-<em>Meguami</em>. —We hear the word of the Queen. We have nothing to say to the Queen
+most dread.</p>
+<p><em>Meguami</em>. —We hear the word of the Queen. We have nothing to say to the Queen
 if she comes with peace. My words are the same as the thers. We want land to rear
 our cattle and sow corn. Strong drink is what we dread. It is against the law of our
-Chief, and we ageee with him. These are our words.
-<em>Radieladi</em>.—We rejoice at the Queen's protection. What we would lay stress on is
+Chief, and we ageee with him. These are our words.</p>
+<p><em>Radieladi</em>.—We rejoice at the Queen's protection. What we would lay stress on is
 the selling of the country, and bringing brandy into it ; but the words of protection
-brought to us we rejoice at.
-<em>Palentin</em>.—We rejoice at the words of the Queen, and we are glad we are coming into
+brought to us we rejoice at.</p>
+<p><em>Palentin</em>.—We rejoice at the words of the Queen, and we are glad we are coming into
 the Protectorate. What we hate is strong drink. That is what we do not want to see
-in the country.
-<em>Mokawano</em>.— We rejoice at the words of the Queen. What we fear is that the Queen
-will sell the country. We should be glad if the Queen gave our Chief a large tract of
-F2
+in the country.</p>
+<p><em>Mokawano</em>.—We rejoice at the words of the Queen. What we fear is that the Queen
+will sell the country. We should be glad if the Queen gave our Chief a large tract of</p>
 
+<p class="center noindent">F2</p>
 
---> <!-- 9 --> <!--
-44
-country. Our Chief was born to have a large tract of country. In the early days our
+<!-- page break -->
+
+<fw class="center halfbottommargin">44</fw>
+
+<p class="noindent">country. Our Chief was born to have a large tract of country. In the early days our
 Chief's first desire was to keep liquor out of the country. We know if the drink comes
 it will destroy us. We wish to keep in friendship with the white man, but if we get
-drunk we may kill a white man, and then our friendship goes.
-<em>Ronwe</em>, (Chief of the Bohkrussi).—We are glad of the Queen's message, but should
+drunk we may kill a white man, and then our friendship goes.</p>
+<p><em>Ronwe</em>, (Chief of the Bohkrussi).—We are glad of the Queen's message, but should
 be sad to see our country sold, as we live by cattle and corn. Our Chief made a
 law to keep liquor out of the country. He hates brandy and native beer also, and so do
-we, and the man who drinks either breaks the law.
-<em>Sir C. Warren</em>.—I am very glad to find that I can thoroughly agree with you on
+we, and the man who drinks either breaks the law.</p>
+<p><em>Sir C. Warren</em>.—I am very glad to find that I can thoroughly agree with you on
 these two points you have laid so much stress on. As to the harm of strong drink I
 quite agree with you. I look upon it as a certain destruction to the native tribes if they
 use it. I dare say you have heard how I stopped the sale of liquors in Mankoroane's and
@@ -676,8 +678,8 @@ Ghasitsive's country. As to the sale of lands, I agree that the lands required f
 cattle and gardens should on no account be saleable, but should be kept as tribal lands
 under the Chief as they are at present. But the question as regards protection comes.
 What can you pay towards it? These matters cannot be one-sided, and I want to know
-to-day how you can assist.
-<em>The Chief Khame</em>.—Concerning these words you have spoken, wherein the
+to-day how you can assist.</p>
+<p><em>The Chief Khame</em>.—Concerning these words you have spoken, wherein the
 Bamangwato can help in this Protectorate, I reply that the land of the Bamangwato,
 is a very large land stretching far away. It is our hunting ground. It is not all our
 grazing and garden ground. It is by this hunting ground we can help, and if our help
@@ -689,14 +691,14 @@ think we can do so if we are wisely connected with the English, for after we hav
 seen your ways we shall take up some of them. But at first we shall not be able to
 understand, as we do not know how you would take possession of a country like this,
 but we are willing to be taught by the English how to manage a country like this,
-and we put confidence in the way they do these things.
-<em>Sir C. Warren</em>.—I am very glad to hear what the Chief says. He has spoken as a
+and we put confidence in the way they do these things.</p>
+<p><em>Sir C. Warren</em>.—I am very glad to hear what the Chief says. He has spoken as a
 Chief should speak in the interest of his country and people, and I have great pleasure
 in making the acquaintance of such a man, and I can see how thoroughly he looks after
 your interests and the well-being of the country. I can assure you it is the wish of the
 Queen and the people of England that your interests should be protected, and your
 lands not circumscribed. I am aware that your hunting ground is being denuded of
-game, and a part of it will soon cease to be the value it has been to you, and I am 
+game, and a part of it will soon cease to be the value it has been to you, and I am
 prepared to bring, for the consideration of Her Majesty, a scheme by which these parts of
 the country may be utilized for the furtherance of the Protectorate. It is desirable that
 we should know how far your garden grounds and cattle grounds extend, and with regard
@@ -708,66 +710,70 @@ native tribes in this country, and that they may be seen improving in their meth
 farming and breeding cattle. Thus I would invite your remarks on the subject. I agree
 with the Chief that we are working in the dark, and that the great point is to go
 forward step by step, always taking care to keep on firm ground, and thus we shall best
-further ther progress and prosperity of the country.
+further ther progress and prosperity of the country.</p>
 
-F.
-M<span class="small">EETING</span> at Shoshong on 13th May 1885, between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and the Chief
-K<span class="small">HAME</span>, of the Bamangwato tribe.
+<hr class="milestone halfline quarterline center">
 
-<em>Khame</em>.-—You spoke about putting our proposals and thoughts in writing. We have
+<p class="center noindent">F.</p>
+
+<p class="center noindent halfbottommargin">M<span class="small">EETING</span> at Shoshong on 13th May 1885, between S<span class="small">IR</span> C. W<span class="small">ARREN</span> and the Chief
+K<span class="small">HAME</span>, of the Bamangwato tribe.</p>
+
+<p><em>Khame</em>.—You spoke about putting our proposals and thoughts in writing. We have
 done so. And here are our writings (handing the paper and translation and the map).
 We would now know what reply you have to give us. (The paper was here read in
-Sechuana to the people by Mr. Mackenzie).
-<em>Sir C Warren</em>.—This is a large and weighty subject, and one which I cannot give
+Sechuana to the people by Mr. Mackenzie).</p>
+<p><em>Sir C Warren</em>.—This is a large and weighty subject, and one which I cannot give
 immediately a complete reply. I quite and thoroughly agree with the Chief in what he
 has written, and on the importance of the things the Chief brings forward ; in fact our
 ideas are the same, as far as I can see, and I shall have much pleasure in bringing before
-Her Majesty the papers he has made. I am very glad to hear of the improvements the
+Her Majesty the papers he has made. I am very glad to hear of the improvements the</p>
 
+<!-- page break -->
 
+<fw class="center halfbottommargin">45</fw>
 
---> <!-- 10 --> <!--
-45
-629
-
-Chief thinks of making in roads, bridges, &amp;c; as, if carried out, they cannot fail to enrich
+<p class="noindent">Chief thinks of making in roads, bridges, &amp;c; as, if carried out, they cannot fail to enrich
 the country ; and I shall put forward in the strongest terms the views he has of stopping
-strong drink coming into the country.
-With regard to the question of the Northern boundary I cannot speak now, as the
+strong drink coming into the country.</p>
+<p>With regard to the question of the Northern boundary I cannot speak now, as the
 notification gives latitude 22° as the limit, but I will bring forward all the important
 points connected with the subject, and I have no doubt the matter will receive every
 consideration. I can only say in conclusion that I sincerely trust to hearing in the
 future that the tribe is continuing a prosperous nation under the great Chief Khame,
 and I must say before I sit down what a great pleasure it has been to me to have had
 the assistance of your old friend Mr. Mackenzie in this matter, and I feel he has done a
-great deal to put the matter before you in a proper light.
-<em>Khame</em>.—What am I do if in the meantime anyone hostile comes by force into my
-country?
-<em>Sir C. Warren</em>.—Turn them out.
+great deal to put the matter before you in a proper light.</p>
+<p><em>Khame</em>.—What am I do if in the meantime anyone hostile comes by force into my
+country?</p>
+<p><em>Sir C. Warren</em>.—Turn them out.</p>
 
-G.
-Proposals of the Chief K<span class="small">HAME</span>, with map* accompanying.
-Shoshong, May 13, 1885.
-I, Khama, Chief of the Bamangwato, with my younger brothers, and heads of my town,
+<hr class="milestone halfline quarterline center">
+
+<p class="center noindent">G.</p>
+<p class="center noindent halfbottommargin">Proposals of the Chief K<span class="small">HAME</span>, with map<a href="#note1" id="note1back">*</a> accompanying.</p>
+
+<p class="right right1">Shoshong, May 13, 1885.</p>
+<p>I, Khama, Chief of the Bamangwato, with my younger brothers, and heads of my town,
 express my gratitude at the coming of the messengers of the Queen of England, and
 for the announcement to me of the Protectorate which has been established by the
 desire of the Queen, and which has come to help the law of the Bamangwato also. I
 give thanks for the words of the Queen, which I have heard, and I accept of (receive)
 the friendship and protection of the Government of England within the Bamangwato
-country.
-Further I give to the Queen to make laws and to change them in the country of the
+country.</p>
+<p>Further I give to the Queen to make laws and to change them in the country of the
 Bamangwato, with reference to both black and white. Nevertheless I am not baffled in
 the Government of my own town, or in deciding cases among my own people according
 to custom ; but again I do not refuse help in these offices. Although this is so, I have
 to say that there are certain laws of my country which the Qucen of England finds in
 operation, and which are advantageous for my people, and I wish that these laws should
 be established, and not taken away by the Government of England. I refer to our law
-concerning intoxicating drinks, that they should not enter the country of the 
+concerning intoxicating drinks, that they should not enter the country of the
 Bamangwato, whether among black people or white people. I refer further to our law which
 declares that the lands of the Bamangwatos are not saleable. I say this law also is good ;
-let it be upheld, and continue to be law among black people and white people.
-My country has got known boundary lines:—
-On the cast the boundary line is that of the Transvaal going with the Limpopo until
+let it be upheld, and continue to be law among black people and white people.</p>
+<p>My country has got known boundary lines:—</p>
+<p>On the cast the boundary line is that of the Transvaal going with the Limpopo until
 the Tolo river joins it. The Tolo is then the boundary ; but I come back to Makobe's
 Hill, and then go along the villages of the Malakala, who live between me and the
 Matabele ; from thence to the Gwai river till it falls into the Zambesi ; then I ascend
@@ -781,7 +787,7 @@ which I hear speaks about 22° as shown in maps ought to be taken away. I do not
 express thanks for it. It speaks of nothing which has existence. Boundary line there
 is none at 22°. It is to cut my country into two. But I say, is not this a word spoken
 before my boundaries were known ? On account of matters of this description, and to
-make known to the Queen the largeness of the country which is now under her 
+make known to the Queen the largeness of the country which is now under her
 protection, I put in a map in which it is tried to show with correctness the boundaries of
 the Bamangwato. My people enjoy three things in our country ; they enjoy their
 cultivated lands, and their cattle stations, and their hunting grounds. We have lived
@@ -789,12 +795,14 @@ through these three things. Certainly the game will come to an end in the future
 at present it is in my country, and while it is still there I hold that it ought to be
 hunted by my people. I know that the help and protection of the Queen requires
 money, and I agree that that money should be paid by the country protected. I have
-thought how this can be done ; I mean plans which can be thought out at the beginning
-*See general map of concessions profixed to this Despatch.
-F3
+thought how this can be done ; I mean plans which can be thought out at the beginning</p>
+<hr/>
+<p class="small noindent center" id="note1">*See general map of concessions profixed to this Despatch. <a class="small" href="#note1back">[back]</a></p>
+
+<p class="center noindent">F3</p>
 
 
---> <!-- 11 --> <!--
+<!-- 11 --> <!--
 46
 so that the Queen's people may all be pleased—the black people and the white people. I
 propose that a certain country of known dimensions should be mine and my people's for our
