--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -801,10 +801,11 @@ thought how this can be done ; I mean plans which can be thought out at the begi
 
 <p class="center noindent">F3</p>
 
+<!-- page break -->
 
-<!-- 11 --> <!--
-46
-so that the Queen's people may all be pleased—the black people and the white people. I
+<fw class="center halfbottommargin">46</fw>
+
+<p class="noindent">so that the Queen's people may all be pleased—the black people and the white people. I
 propose that a certain country of known dimensions should be mine and my people's for our
 cultivated fields and our cattle stations as I have shown in the map. Then I say, with
 reference to all the country that remains, I wish that the English people should come
@@ -814,10 +815,10 @@ country, except where the English shall have come to dwell. My people shall be s
 by cultivated lands and the cattle stations of the English inhabitants of the country.
 I speak this in effect inviting the English because it is a nation with which we have
 become acquainted, and with whose ways we have had pleasure. Then I request that
-the Queen's Government appoint a man to take charge of this matter, and let the 
+the Queen's Government appoint a man to take charge of this matter, and let the
 protection of this country come from the English who will settle in it. I am of opinion
 that the country which I give over will exceed in value the cost of the Protectorate
-among the Bamangwato. But I feel that I am speaking to gentlemen of the 
+among the Bamangwato. But I feel that I am speaking to gentlemen of the
 Government of England. Shall I be afraid that they will requite me with witchcraft (deception
 leading to ruin) ? Rather may I not hope that they may see both sides of the question
 of to-day, that they will regard the protection, and then regard also the country which
@@ -832,51 +833,184 @@ purpose. Having done this, without doubt if there came a great difficulty, we wo
 appeal for the help of our Queen in England. The right kind of English settler in the
 country will be seen by his doings on his place. Some may make themselves out to be
 settlers for a time only, while they are killing game, after which they would take their
-departure with what they had collected, having done nothing with their place. 
+departure with what they had collected, having done nothing with their place.
 Therefore, I propose that it be enacted that the English settler who newly arrives should
 build his house and cultivate bis lands, and show himself to be a true settler and worker,
 and not a travelling trader. Those who shall be received in the country, to become
 settlers in it, ought to be approved by the officer of the Queen appointed to this work ;
-and I add, let us work together, let me also approve of those who are received.
-(Signed) K<span class="small">HAME</span>. (Signed) K<span class="small">UATI</span>
+and I add, let us work together, let me also approve of those who are received.</p>
+<div class="row liv_022004-2">
+  <div class="column" n="1">
+    <div class="item">(Signed)</div>
+    <div class="item">( ,, )</div>
+    <div class="item">( ,, )</div>
+    <div class="item">( ,, )</div>
+    <div class="item">( ,, )</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">K<span class="small">HAME</span>.</div>
+    <div class="item">S<span class="small">EVETSE</span>.</div>
+    <div class="item">U<span class="small">PHOENG</span>.</div>
+    <div class="item">I<span class="small">KITIRENG</span>.</div>
+    <div class="item">R<span class="small">ADITLADI</span>.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OKUTSHUANE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">S<span class="small">EPHEKOLO</span>.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">L<span class="small">EGKOWE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">R<span class="small">ABURITENG</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">ATHEBI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">T<span class="small">IRO</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">K<span class="small">GOTHOOCHO</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">R<span class="small">AMPODIE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">T<span class="small">ORONGANE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">K<span class="small">AMODISA</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OLIA</span></div>
+    <div class="item">&nbsp;</div>
+  </div>
+  <div class="column" n="3">
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+  </div>
+  <div class="column" n="4">
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="5">
+    <div class="item">K<span class="small">UATI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">ATOLSOTE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OLOINGANE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">S<span class="small">ABESHO</span></div> 
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">T<span class="small">AU</span>&nbsp;K<span 
+    class="small">OBŬNG</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OCHOLOPHEKO</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">S<span class="small">UPHOBI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">D<span class="small">ILORWE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OTSHEQUWE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">R<span class="small">ANI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OKGETHI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">R<span class="small">AMOGABELEO</span></div>
+  </div>
+  <div class="column" n="6">
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+  </div>
+</div>
 
-( ,, ) S<span class="small">EVETSE</span>. this
-( ,, )U<span class="small">PHOENG</span>. M<span class="small">ATOLSOTE</span> X
-( ,, ) I<span class="small">KITIRENG</span>. mark.
-( ,,) R<span class="small">ADITLADI</span>.
-His M<span class="small">OLOINGANE</span>
-his
-X M<span class="small">OKUTSHUANE</span> mark. X
-his
-mark.
-S<span class="small">ABESHO</span> X
-(Signed) S<span class="small">EPHEKOLO</span>. mark.
-his
-L<span class="small">EGKOWE</span> X T<span class="small">AU</span> K<span class="small">OBUNG</span> X
-R<span class="small">ABURITENG</span> X M<span class="small">OCHOLOPHEKO</span>X
-mark.
-mark.
-his
-his
-M<span class="small">ATHEBI</span> X S<span class="small">UPHOBI</span> X
-mark.
-mark.
-(Signed) T<span class="small">IRO</span> his D<span class="small">ILORWE</span> X
-K<span class="small">GOTHOOCHO</span> X mark. mark.his
-M<span class="small">OTSHEQUWE</span> X
-(Signed) R<span class="small">AMPODIE</span>
-his
-T<span class="small">ORONGANE</span> X R<span class="small">ANI</span> X
-mark.
-his
-K<span class="small">AMODISA</span> X M<span class="small">OKGETHI</span> X
-mark. mark.
-his his
-M<span class="small">OLIA</span> X R<span class="small">AMOGABELEO</span> X
-mark. mark.
-
-
---> <!-- 12 --> <!--
+<!-- 12 --> <!--
 47
 631
 his his
