--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -1012,32 +1012,31 @@ and I add, let us work together, let me also approve of those who are received.<
 
 <!-- 12 --> <!--
 47
-631
-his his
-M<span class="small">OKOWANI</span> X T<span class="small">HOGANE</span> X
-mark. mark.
-his his
-P<span class="small">HITTWE</span> X M<span class="small">OOKODI</span> X
-mark. mark.
-his his
-N<span class="small">OANVOADICKMEWE</span> X L<span class="small">ETHAKU</span> X
-mark.
-mark.
-His (Signed) N<span class="small">KOBELE</span>.
-M<span class="small">OPI</span> X ( ,, ) M<span class="small">OROA</span>.
-Mark. ( ,. ) G<span class="small">UBUSATU</span>.
-M<span class="small">OTHELWA</span> X M<span class="small">OTHIBO</span> mark. X
-(Signed) K<span class="small">GOSIEGAU</span>. mark.his
-His M<span class="small">OGKWATHI</span> X
-M<span class="small">OTHOESI</span> X mark.
-mark. (Signed) M<span class="small">UALIFIIE</span>.
+
+( ,, ) 
+M<span class="small">OKOWANI</span> 
+T<span class="small">HOGANE</span>
+P<span class="small">HITTWE</span> 
+M<span class="small">OOKODI</span>
+N<span class="small">OANVOADICKMEWE</span> 
+L<span class="small">ETHAKU</span>
+N<span class="small">KOBELE</span>.
+M<span class="small">OPI</span> 
+M<span class="small">OROA</span>.
+G<span class="small">UBUSATU</span>.
+M<span class="small">OTHELWA</span> 
+M<span class="small">OTHIBO</span> 
+K<span class="small">GOSIEGAU</span>. 
+ M<span class="small">OGKWATHI</span>
+M<span class="small">OTHOESI</span> 
+ M<span class="small">UALIFIIE</span>.
 Signed in Kgotha.
 Witnesssed by :—
-(Signed) E<span class="small">DWIN</span> L<span class="small">LOYD</span>.
-( ,, ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
-( ,, )F<span class="small">RANK</span> W<span class="small">HITELY</span>.
+E<span class="small">DWIN</span> L<span class="small">LOYD</span> 
+G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
+F<span class="small">RANK</span> W<span class="small">HITELY</span>.
 Translated from the Sechuana by—
-(Signed) J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
+J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
 
 H.
 P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>, 25th May 1885.
@@ -1058,20 +1057,17 @@ Further I wish to establish that the country concerning which I am speaking is n
 saleable according to Bakwena. I say let this go on to be the law of the country.
 And as to the country which I give to the Queen, I mean that we shall hunt in it
 while there is still game in it.
-(Signed) S<span class="small">ECHELE</span>.
-( ,, ) S<span class="small">EBELE</span>.
-( ,, ) K<span class="small">GARI</span>.
-his
-K<span class="small">GOSILINTSI</span> X
-mark.
-(Signed) M<span class="small">OTSIOKHIMO</span>.
-Witnesses :— ,, ) M<span class="small">HIKO</span>.
-(Signed) F<span class="small">REDK</span>. W. W<span class="small">ALKER</span>.
+S<span class="small">ECHELE</span>.
+S<span class="small">EBELE</span>.
+K<span class="small">GARI</span>.
+K<span class="small">GOSILINTSI</span>
+M<span class="small">OTSIOKHIMO</span>.
+Witnesses :— M<span class="small">HIKO</span>.
+F<span class="small">REDK</span>. W. W<span class="small">ALKER</span>.
 G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
 Translated from the Sechuana by— 
 J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
 F4
-
 
 --> <!-- 13 --> <!--
 48
@@ -1105,38 +1101,21 @@ With reference to the white men who are placed in the country which I set apart
 to-day for the English, I wish to have a voice in approving of them. As to the country
 which I have apportioned to the Queen in the West, I desire that my people may hunt
 in it while the game is still there.
-his
-G<span class="small">HASITSIVE</span> X
-mark.
-(Signed) B<span class="small">ATHOEN</span>
-his
-L<span class="small">EGOTSAMA</span> X
-mark
-his
-KUMUNAO
-X
-mark.
-his
-B<span class="small">OME</span> X
-mark.
-his
-T<span class="small">ELEKELEO</span> X
-mark.
-his
-M<span class="small">ASEU</span> X
-mark.
-his
-M<span class="small">OLIETSA</span> X
-mark.
-his
-K<span class="small">GAMA</span> X
-mark.
-his
-M<span class="small">OISAKAMO</span> X
-mark.
+
+G<span class="small">HASITSIVE</span>
+B<span class="small">ATHOEN</span>
+L<span class="small">EGOTSAMA</span>
+K<span class="small">UMUNAO</span>
+B<span class="small">OME</span>
+T<span class="small">ELEKELEO</span>
+M<span class="small">ASEU</span>
+M<span class="small">OLIETSA</span>
+K<span class="small">GAMA</span>
+M<span class="small">OISAKAMO</span>
+
 Witnesses :— 
-(Signed) B. C. F<span class="small">HERE</span>.
-( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
+B. C. F<span class="small">RERE</span>.
+G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
 </section> -->
 
 <!-- start seg 3 -->
